alignment fix + font

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: pokemon;
+  src: url('./pokemon.ttf');
+}
+
 * {
+  font-family: pokemon;
   box-sizing: border-box;
+  
 }
 
 #root{
@@ -100,8 +107,9 @@ body:after{
 }
 
 .pokemon-details-container h3 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   margin: 0;
+  color: #333;
 }
 
 .type-container {
@@ -110,13 +118,14 @@ body:after{
 
 .type-container span {
   text-transform: uppercase;
-  font-size: 12px;
-  padding: 2px 5px;
+  font-size: 8px;
+  padding: 4px 13px 2px;
   min-width: 50px;
   display: inline-block;
   color: white;
   border-radius: 3px;
   margin: 0 5px;
+  line-height: 2;
 }
 
 span.fire {
@@ -201,16 +210,18 @@ span.steel {
 
 .bar-container{
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bar-container p {
-  margin: 0 5px 5px;
-  flex: 3;
-  text-align: right;
-  font-size: 9px;
-  line-height: 1;
-  text-transform: uppercase;
-  letter-spacing: .4px;
+  margin-right: 5px;
+    flex: 3 1;
+    text-align: right;
+    font-size: 5px;
+    line-height: 0;
+    text-transform: uppercase;
+    letter-spacing: .4px;
 }
 
 .bar {
@@ -383,4 +394,14 @@ span.steel {
   background: #ee5253;
 }
 
+.pokebal-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
+svg{
+  width: 80px;
+  margin: 0 auto;
+}
